--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">Información</a></li>
-						<li><a href="#two">Propuestas</a></li>
-						<li><a href="#three">Militantes</a></li>
-						<li><a href="#four">¡Únete!</a></li>
+						<li><a href="#informacion" class="active">Información</a></li>
+						<li><a href="#propuestas">Propuestas</a></li>
+						<li><a href="#militantes">Militantes</a></li>
+						<li><a href="#unete">¡Únete!</a></li>
 					</ul>
 				</nav>
 			</section>
@@ -33,7 +33,7 @@
 					<div id="main">
 
 						<!-- One -->
-							<section id="one">
+							<section id="informacion">
 								<div class="image main" data-position="center">
 									<img src="images/banner.png" alt="" />
 								</div>
@@ -48,7 +48,7 @@
 							</section>
 
 						<!-- Two -->
-							<section id="two">
+							<section id="propuestas">
 								<div class="container">
 									<h3>Propuestas</h3>
 										<p>1. Establecernos como intermediario entre el staff y el proletariado, con el fin de legitimar las propuestas y convertirlas en eventuales proyectos con extrema urgencia.</p>
@@ -68,7 +68,7 @@
 							</section>
 
 						<!-- Three -->
-							<section id="three">
+							<section id="militantes">
 								<div class="container">
 									<h3>Militantes</h3>
 												<h4>Fundador</h4>
@@ -97,7 +97,7 @@
 							</section>
 
 						<!-- Four -->
-							<section id="four">
+							<section id="unete">
 								<div class="container">
 									<h3>¡Únete!</h3>
 									<p>Desde la directiva del Partido Comunista Palta Popular, te invitamos cordialmente a unirte a la lucha popular, para ser un servidor movilizado pero con conciencia. ¿Cómo lo puedes hacer? ¡Inscribiéndote como militante del partido!</p>
