--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<li><a href="#informacion" class="active">Información</a></li>
 						<li><a href="#propuestas">Propuestas</a></li>
 						<li><a href="#militantes">Militantes</a></li>
-						<li><a href="#unete">¡Únete!</a></li>
+						<li><a href="#inscripcion">Inscribete!</a></li>
 					</ul>
 				</nav>
 			</section>
@@ -35,11 +35,11 @@
 						<!-- One -->
 							<section id="informacion">
 								<div class="image main" data-position="center">
-									<img src="images/banner.png" alt="" />
+									<img src="images/banner1.png" alt="" />
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2></h2>
+										<h2>Partido Comunista Palta Popular</h2>
 										<h3>Nuestra historia</h3>
 									</header>
 									<p>El Partido Comunista Palta Popular o PC(PP), nace como el primer movimiento de izquierda verdaderamente revolucionario en el servidor del compañero Roberto. Tenemos un proyecto ambicioso que pretende llevar adelante transformaciones profundas en beneficio de la comunidad, siempre desde una perspectiva socialista y popular.</p>
@@ -71,15 +71,17 @@
 							<section id="militantes">
 								<div class="container">
 									<h3>Militantes</h3>
-												<h4>Fundador</h4>
+												<h5>Fundador</h5>
 												<p>- Beissed#0001</p>
-												<h4>Cofundador</h4>
+												<h5>Cofundador</h5>
 												<p>- Don Seba Vieira#4698</p>
-												<h4>Secretario</h4>
+												<h5>Secretario</h5>
 												<p>- Masaki 8ukiyo8#0084</p>
-												<h4>Tesorero</h4>
+												<h5>Tesorero</h5>
 												<p>- Everton Biónico#2830</p>
-												<h4>Militantes fundadores</h4>
+												<h5>Jefe de campaña</h5>
+												<p>PepinoGaláctico#1487</p>
+												<h5>Militantes fundadores</h5>
 												<p>- Sebadmin#8505</p>
 												<p>- Taiwán#5257</p>
 												<p>- peko#1137</p>
@@ -87,8 +89,7 @@
 												<p>- Primateklo#4975</p>
 												<p>- Don_Die6o#0652</p>
 												<p>- Mick Horneta#9718</p>
-												<h4>Militantes</h4>
-												<p>PepinoGaláctico#1487</p>
+												<h5>Militantes</h5>
 												<p>Nostril🕷#2871</p>
 												<p>ELEtres#9810</p>
 												<p>gaster se unió al PC(PP)#8581</p>
@@ -96,15 +97,24 @@
 								</div>
 							</section>
 
-						<!-- Four -->
-							<section id="unete">
+							<section id="inscripcion">
 								<div class="container">
-									<h3>¡Únete!</h3>
+									<h3>Inscribete al PC(PP)!</h3>
 									<p>Desde la directiva del Partido Comunista Palta Popular, te invitamos cordialmente a unirte a la lucha popular, para ser un servidor movilizado pero con conciencia. ¿Cómo lo puedes hacer? ¡Inscribiéndote como militante del partido!</p>
-									<p>- Click derecho sobre tu usuario.</p>
-									<p>- Editar perfil del servidor.</p>
-									<p>- Después de tu nombre, coloca nuestras siglas PC o PC(PP)</p>
-									<img src="images/Screenshot_945.png" alt="" />
+									<p>Debes de rellenar el formulario y un mensaje bonito explicando porqué quieres unirte :D</p>
+									<form method="post" action="#">
+										<div class="row gtr-uniform">
+											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Nombre/Nick" /></div>
+											<div class="col-6 col-12-xsmall"><input type="text" name="discord" id="discord" placeholder="Usuario de Discord" /></div>
+											<div class="col-12"><textarea name="message" id="message" placeholder="Mensaje" rows="6"></textarea></div>
+											<div class="col-12">
+												<ul class="actions">
+													<li><input type="submit" class="primary" value="Enviar inscripción" /></li>
+													<li><input type="reset" value="Eliminar contenido" /></li>
+												</ul>
+											</div>
+										</div>
+									</form>
 								</div>
 							</section>
 
