--- a/index.html
+++ b/index.html
@@ -102,19 +102,7 @@
 									<h3>Inscribete al PC(PP)!</h3>
 									<p>Desde la directiva del Partido Comunista Palta Popular, te invitamos cordialmente a unirte a la lucha popular, para ser un servidor movilizado pero con conciencia. ¿Cómo lo puedes hacer? ¡Inscribiéndote como militante del partido!</p>
 									<p>Debes de rellenar el formulario y un mensaje bonito explicando porqué quieres unirte :D</p>
-									<form method="post" action="#">
-										<div class="row gtr-uniform">
-											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Nombre/Nick" /></div>
-											<div class="col-6 col-12-xsmall"><input type="text" name="discord" id="discord" placeholder="Usuario de Discord" /></div>
-											<div class="col-12"><textarea name="message" id="message" placeholder="Mensaje" rows="6"></textarea></div>
-											<div class="col-12">
-												<ul class="actions">
-													<li><input type="submit" class="primary" value="Enviar inscripción" /></li>
-													<li><input type="reset" value="Eliminar contenido" /></li>
-												</ul>
-											</div>
-										</div>
-									</form>
+									<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdIInAojbPDhy01Kf5x568m1ISCmlRT6KsZtbbvtbicC53bFA/viewform?embedded=true" width="800" height="800" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
 								</div>
 							</section>
 
