--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
 							<section id="propuestas">
 								<div class="container">
 									<h3>Propuestas</h3>
+										<h4>No poltíticas</h4>
+										<p>1. Impulsar actividades en el servidor de Discord para tener una comunidad activa y conectada.</p>
+										<p>2. Promover la creación de canales informativos de divulgación científica, poltítica y noticias de la actualidad.</p>
+										<p>3. Realizar fact-checking de noticias para evitar noticias falsas y/o sesgadas.</p>
+										<p>4. Buscar ordenar el servidor de Discord, hay muchos canales y gran parte de ellos no se utilizan, ya que por lo general mandan emojis del Roberttson chiquitito.</p>
+										<p>Las actividades impulsadas por el PC(PP) buscan ser realizdas para que la gente en el servidor se conozcan y se relacionen entre sí para crear una comunidad mas unida. Entre estas ideas, está ver películas y series en grupo e incluso realizar "conciertos".</p>
+										<p>También buscamos crear canales de información imparciales para que la gente se informe correctamente, sea algo político u otra cosa.</p>
+										<h4>Políticas</h4>
 										<p>1. Establecernos como intermediario entre el staff y el proletariado, con el fin de legitimar las propuestas y convertirlas en eventuales proyectos con extrema urgencia.</p>
 										<p>2. Establecer relaciones diplomáticas basadas en el respeto mutuo con los gobiernos independientes del Reddit, para fortalecer la cooperación política.</p>
 										<p>3. Preservar y proteger los distintos movimientos, partidos o entidades de verdadera izquierda</p>
