--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 												<h5>Tesorero</h5>
 												<p>- Everton Biónico#2830</p>
 												<h5>Jefe de campaña</h5>
-												<p>PepinoGaláctico#1487</p>
+												<p>- PepinoGaláctico#1487</p>
 												<h5>Militantes fundadores</h5>
 												<p>- Sebadmin#8505</p>
 												<p>- Taiwán#5257</p>
@@ -98,9 +98,9 @@
 												<p>- Don_Die6o#0652</p>
 												<p>- Mick Horneta#9718</p>
 												<h5>Militantes</h5>
-												<p>Nostril🕷#2871</p>
-												<p>ELEtres#9810</p>
-												<p>gaster se unió al PC(PP)#8581</p>
+												<p>- Nostril🕷#2871</p>
+												<p>- ELEtres#9810</p>
+												<p>- gaster se unió al PC(PP)#8581</p>
 											</ul>
 								</div>
 							</section>
