--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 												<h5>Cofundador</h5>
 												<p>- Don Seba Vieira#4698</p>
 												<h5>Secretario</h5>
-												<p>- Masaki 8ukiyo8#0084</p>
+												<p>-8ukiyo8#0084 (Masaki)</p>
 												<h5>Tesorero</h5>
 												<p>- Everton Biónico#2830</p>
 												<h5>Jefe de campaña</h5>
