--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 										<p>1. Impulsar actividades en el servidor de Discord para tener una comunidad activa y conectada.</p>
 										<p>2. Promover la creación de canales informativos de divulgación científica, poltítica y noticias de la actualidad.</p>
 										<p>3. Realizar fact-checking de noticias para evitar noticias falsas y/o sesgadas.</p>
-										<p>4. Buscar ordenar el servidor de Discord, hay muchos canales y gran parte de ellos no se utilizan, ya que por lo general mandan emojis del Roberttson chiquitito.</p>
+										<p>4. Buscar ordenar el servidor de Discord, hay muchos canales y gran parte de ellos no se utilizan, lo que termina en que manden emojis del Roberttson chiquitito.</p>
 										<p5. Promover la lectura, haciendo que vuelva el canal biblioteca al Discord</p>
 										<p>Las actividades impulsadas por el PC(PP) buscan ser realizdas para que la gente en el servidor se conozcan y se relacionen entre sí para crear una comunidad mas unida. Entre estas ideas, está ver películas y series en grupo e incluso realizar "conciertos".</p>
 										<p>También buscamos crear canales de información imparciales para que la gente se informe correctamente, sea algo político u otra cosa.</p>
