--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
 												<p>- ELEtres#9810</p>
 												<p>- gaster se unió al PC(PP)#8581</p>
 												<p>- camikeloke#4456</p>
+												<p>- Gugarfeldi#5193/p>
+												<p>- nubexh#4348</p>
+												<p>- Papitas#6094</p>
 											</ul>
 								</div>
 							</section>
